--- a/MiniProjeto_DBC_Slot4.ipynb
+++ b/MiniProjeto_DBC_Slot4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MiniProjeto_DBC_Slot4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuel0ea2XGJhKr3Zu5h5Hn",
+      "authorship_tag": "ABX9TyNbRC/SfY2ilOMLCnUGVHvF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,7 +276,8 @@
         "    'Weekly_Sales':'Vendas_na_Semana',\t\n",
         "    'Holiday_Flag':'Semana_com_Feriado',\t\n",
         "    'Temperature':'Temperatura',\n",
-        "    'Fuel_Price':'Preco_Combustivel'\n",
+        "    'Fuel_Price':'Preco_Combustivel',\n",
+        "    'Unemployment':'Desemprego'\n",
         "    }, inplace = True)\n",
         "df"
       ],
@@ -286,45 +287,45 @@
           "height": 424
         },
         "id": "NMHLcB6y3Xet",
-        "outputId": "a438933f-f994-4819-c58f-7bf4bc843130"
+        "outputId": "e8af92d1-ff74-4f92-cd34-281274903a2c"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      Loja        Data  Vendas_na_Semana  Semana_com_Feriado  Temperatura  \\\n",
-              "0        1  05-02-2010        1643690.90                   0        42.31   \n",
-              "1        1  12-02-2010        1641957.44                   1        38.51   \n",
-              "2        1  19-02-2010        1611968.17                   0        39.93   \n",
-              "3        1  26-02-2010        1409727.59                   0        46.63   \n",
-              "4        1  05-03-2010        1554806.68                   0        46.50   \n",
-              "...    ...         ...               ...                 ...          ...   \n",
-              "6430    45  28-09-2012         713173.95                   0        64.88   \n",
-              "6431    45  05-10-2012         733455.07                   0        64.89   \n",
-              "6432    45  12-10-2012         734464.36                   0        54.47   \n",
-              "6433    45  19-10-2012         718125.53                   0        56.47   \n",
-              "6434    45  26-10-2012         760281.43                   0        58.85   \n",
+              "      Loja       Data  Vendas_na_Semana  Semana_com_Feriado  Temperatura  \\\n",
+              "0        1 2010-05-02        1643690.90                   0        42.31   \n",
+              "1        1 2010-12-02        1641957.44                   1        38.51   \n",
+              "2        1 2010-02-19        1611968.17                   0        39.93   \n",
+              "3        1 2010-02-26        1409727.59                   0        46.63   \n",
+              "4        1 2010-05-03        1554806.68                   0        46.50   \n",
+              "...    ...        ...               ...                 ...          ...   \n",
+              "6430    45 2012-09-28         713173.95                   0        64.88   \n",
+              "6431    45 2012-05-10         733455.07                   0        64.89   \n",
+              "6432    45 2012-12-10         734464.36                   0        54.47   \n",
+              "6433    45 2012-10-19         718125.53                   0        56.47   \n",
+              "6434    45 2012-10-26         760281.43                   0        58.85   \n",
               "\n",
-              "      Preco_Combustivel         CPI  Unemployment  \n",
-              "0                 2.572  211.096358         8.106  \n",
-              "1                 2.548  211.242170         8.106  \n",
-              "2                 2.514  211.289143         8.106  \n",
-              "3                 2.561  211.319643         8.106  \n",
-              "4                 2.625  211.350143         8.106  \n",
-              "...                 ...         ...           ...  \n",
-              "6430              3.997  192.013558         8.684  \n",
-              "6431              3.985  192.170412         8.667  \n",
-              "6432              4.000  192.327265         8.667  \n",
-              "6433              3.969  192.330854         8.667  \n",
-              "6434              3.882  192.308899         8.667  \n",
+              "      Preco_Combustivel         CPI  Desemprego  \n",
+              "0                 2.572  211.096358       8.106  \n",
+              "1                 2.548  211.242170       8.106  \n",
+              "2                 2.514  211.289143       8.106  \n",
+              "3                 2.561  211.319643       8.106  \n",
+              "4                 2.625  211.350143       8.106  \n",
+              "...                 ...         ...         ...  \n",
+              "6430              3.997  192.013558       8.684  \n",
+              "6431              3.985  192.170412       8.667  \n",
+              "6432              4.000  192.327265       8.667  \n",
+              "6433              3.969  192.330854       8.667  \n",
+              "6434              3.882  192.308899       8.667  \n",
               "\n",
               "[6435 rows x 8 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f52b9d60-6581-4949-82b9-cd36371ca6e4\">\n",
+              "  <div id=\"df-f1bea702-cdff-461c-ab55-82c0f9a69baf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -351,14 +352,14 @@
               "      <th>Temperatura</th>\n",
               "      <th>Preco_Combustivel</th>\n",
               "      <th>CPI</th>\n",
-              "      <th>Unemployment</th>\n",
+              "      <th>Desemprego</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>1</td>\n",
-              "      <td>05-02-2010</td>\n",
+              "      <td>2010-05-02</td>\n",
               "      <td>1643690.90</td>\n",
               "      <td>0</td>\n",
               "      <td>42.31</td>\n",
@@ -369,7 +370,7 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1</td>\n",
-              "      <td>12-02-2010</td>\n",
+              "      <td>2010-12-02</td>\n",
               "      <td>1641957.44</td>\n",
               "      <td>1</td>\n",
               "      <td>38.51</td>\n",
@@ -380,7 +381,7 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1</td>\n",
-              "      <td>19-02-2010</td>\n",
+              "      <td>2010-02-19</td>\n",
               "      <td>1611968.17</td>\n",
               "      <td>0</td>\n",
               "      <td>39.93</td>\n",
@@ -391,7 +392,7 @@
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>1</td>\n",
-              "      <td>26-02-2010</td>\n",
+              "      <td>2010-02-26</td>\n",
               "      <td>1409727.59</td>\n",
               "      <td>0</td>\n",
               "      <td>46.63</td>\n",
@@ -402,7 +403,7 @@
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>1</td>\n",
-              "      <td>05-03-2010</td>\n",
+              "      <td>2010-05-03</td>\n",
               "      <td>1554806.68</td>\n",
               "      <td>0</td>\n",
               "      <td>46.50</td>\n",
@@ -424,7 +425,7 @@
               "    <tr>\n",
               "      <th>6430</th>\n",
               "      <td>45</td>\n",
-              "      <td>28-09-2012</td>\n",
+              "      <td>2012-09-28</td>\n",
               "      <td>713173.95</td>\n",
               "      <td>0</td>\n",
               "      <td>64.88</td>\n",
@@ -435,7 +436,7 @@
               "    <tr>\n",
               "      <th>6431</th>\n",
               "      <td>45</td>\n",
-              "      <td>05-10-2012</td>\n",
+              "      <td>2012-05-10</td>\n",
               "      <td>733455.07</td>\n",
               "      <td>0</td>\n",
               "      <td>64.89</td>\n",
@@ -446,7 +447,7 @@
               "    <tr>\n",
               "      <th>6432</th>\n",
               "      <td>45</td>\n",
-              "      <td>12-10-2012</td>\n",
+              "      <td>2012-12-10</td>\n",
               "      <td>734464.36</td>\n",
               "      <td>0</td>\n",
               "      <td>54.47</td>\n",
@@ -457,7 +458,7 @@
               "    <tr>\n",
               "      <th>6433</th>\n",
               "      <td>45</td>\n",
-              "      <td>19-10-2012</td>\n",
+              "      <td>2012-10-19</td>\n",
               "      <td>718125.53</td>\n",
               "      <td>0</td>\n",
               "      <td>56.47</td>\n",
@@ -468,7 +469,7 @@
               "    <tr>\n",
               "      <th>6434</th>\n",
               "      <td>45</td>\n",
-              "      <td>26-10-2012</td>\n",
+              "      <td>2012-10-26</td>\n",
               "      <td>760281.43</td>\n",
               "      <td>0</td>\n",
               "      <td>58.85</td>\n",
@@ -480,7 +481,7 @@
               "</table>\n",
               "<p>6435 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f52b9d60-6581-4949-82b9-cd36371ca6e4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f1bea702-cdff-461c-ab55-82c0f9a69baf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -531,12 +532,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f52b9d60-6581-4949-82b9-cd36371ca6e4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f1bea702-cdff-461c-ab55-82c0f9a69baf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f52b9d60-6581-4949-82b9-cd36371ca6e4');\n",
+              "          const element = document.querySelector('#df-f1bea702-cdff-461c-ab55-82c0f9a69baf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -559,7 +560,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     },
