--- a/MiniProjeto_DBC_Slot4.ipynb
+++ b/MiniProjeto_DBC_Slot4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MiniProjeto_DBC_Slot4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbRC/SfY2ilOMLCnUGVHvF",
+      "authorship_tag": "ABX9TyMgDRU3ZcMTjD1HZ7mz7+x/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -612,9 +612,9 @@
           "height": 424
         },
         "id": "2b-YdUu64jcf",
-        "outputId": "786ea04e-5282-4dac-a326-5bcc3a771bc4"
+        "outputId": "a3c4931b-0098-46f7-f479-47955066aa16"
       },
-      "execution_count": 7,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,24 +633,24 @@
               "6433    45 2012-10-19         718125.53                   0        56.47   \n",
               "6434    45 2012-10-26         760281.43                   0        58.85   \n",
               "\n",
-              "      Preco_Combustivel         CPI  Unemployment  \n",
-              "0                 2.572  211.096358         8.106  \n",
-              "1                 2.548  211.242170         8.106  \n",
-              "2                 2.514  211.289143         8.106  \n",
-              "3                 2.561  211.319643         8.106  \n",
-              "4                 2.625  211.350143         8.106  \n",
-              "...                 ...         ...           ...  \n",
-              "6430              3.997  192.013558         8.684  \n",
-              "6431              3.985  192.170412         8.667  \n",
-              "6432              4.000  192.327265         8.667  \n",
-              "6433              3.969  192.330854         8.667  \n",
-              "6434              3.882  192.308899         8.667  \n",
+              "      Preco_Combustivel         CPI  Desemprego  \n",
+              "0                 2.572  211.096358       8.106  \n",
+              "1                 2.548  211.242170       8.106  \n",
+              "2                 2.514  211.289143       8.106  \n",
+              "3                 2.561  211.319643       8.106  \n",
+              "4                 2.625  211.350143       8.106  \n",
+              "...                 ...         ...         ...  \n",
+              "6430              3.997  192.013558       8.684  \n",
+              "6431              3.985  192.170412       8.667  \n",
+              "6432              4.000  192.327265       8.667  \n",
+              "6433              3.969  192.330854       8.667  \n",
+              "6434              3.882  192.308899       8.667  \n",
               "\n",
               "[6435 rows x 8 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-60dc2f72-762c-4adc-a129-093dbf175418\">\n",
+              "  <div id=\"df-401e651f-4b1c-4d30-97e4-576a1afe1324\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -677,7 +677,7 @@
               "      <th>Temperatura</th>\n",
               "      <th>Preco_Combustivel</th>\n",
               "      <th>CPI</th>\n",
-              "      <th>Unemployment</th>\n",
+              "      <th>Desemprego</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -806,7 +806,7 @@
               "</table>\n",
               "<p>6435 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-60dc2f72-762c-4adc-a129-093dbf175418')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-401e651f-4b1c-4d30-97e4-576a1afe1324')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -857,12 +857,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-60dc2f72-762c-4adc-a129-093dbf175418 button.colab-df-convert');\n",
+              "          document.querySelector('#df-401e651f-4b1c-4d30-97e4-576a1afe1324 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-60dc2f72-762c-4adc-a129-093dbf175418');\n",
+              "          const element = document.querySelector('#df-401e651f-4b1c-4d30-97e4-576a1afe1324');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -885,7 +885,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 26
         }
       ]
     },
@@ -896,66 +896,39 @@
         "df.isna().sum()"
       ],
       "metadata": {
+        "id": "BSGzabHT4jfm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Meida de vendas de todas as semanas\n",
+        "media_semana = df[['Vendas_na_Semana']]\n",
+        "np.mean(media_semana, axis=0)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "BSGzabHT4jfm",
-        "outputId": "b615c4c6-92e7-45a5-d43a-cea3cfc3c613"
+        "id": "CXley4bU4jpG",
+        "outputId": "83a7eaf0-7874-48db-a622-edc6ee190139"
       },
-      "execution_count": 8,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Loja                  0\n",
-              "Data                  0\n",
-              "Vendas_na_Semana      0\n",
-              "Semana_com_Feriado    0\n",
-              "Temperatura           0\n",
-              "Preco_Combustivel     0\n",
-              "CPI                   0\n",
-              "Unemployment          0\n",
-              "dtype: int64"
+              "Vendas_na_Semana    1.046965e+06\n",
+              "dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 33
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "TUK61o3X4jip"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "7_JgxIO54jls"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "CXley4bU4jpG"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
