--- a/MiniProjeto_DBC_Slot4.ipynb
+++ b/MiniProjeto_DBC_Slot4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MiniProjeto_DBC_Slot4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZgG8ndH18G20kerMu1suc",
+      "authorship_tag": "ABX9TyP36iMsOgr6HwWxCWSz5xwg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1898,6 +1898,12 @@
         "total_vendas_por_loja = df.groupby('Loja',as_index=False)['Vendas_na_Semana'].sum()\n",
         "total_vendas_por_loja = total_vendas_por_loja.round()\n",
         "total_vendas_por_loja = total_vendas_por_loja.sort_values(by='Vendas_na_Semana',ascending=False)\n",
+        "\n",
+        "\n",
+        "# Renoemar coluna para ficar de acordo com agrupamento\n",
+        "total_vendas_por_loja.rename(columns = {\n",
+        "    'Vendas_na_Semana':'Total_Vendas',\n",
+        "    }, inplace = True)\n",
         "total_vendas_por_loja"
       ],
       "metadata": {
@@ -1906,64 +1912,64 @@
           "height": 1000
         },
         "id": "S5539TY6Dgng",
-        "outputId": "6a33dd49-facf-4482-d7f9-00467b61988d"
+        "outputId": "8cf6aaeb-c63c-42fc-89e1-8406e89a35be"
       },
-      "execution_count": 150,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "    Loja  Vendas_na_Semana\n",
-              "19    20       301397792.0\n",
-              "3      4       299543953.0\n",
-              "13    14       288999911.0\n",
-              "12    13       286517704.0\n",
-              "1      2       275382441.0\n",
-              "9     10       271617714.0\n",
-              "26    27       253855917.0\n",
-              "5      6       223756131.0\n",
-              "0      1       222402809.0\n",
-              "38    39       207445542.0\n",
-              "18    19       206634862.0\n",
-              "30    31       199613906.0\n",
-              "22    23       198750618.0\n",
-              "23    24       194016021.0\n",
-              "10    11       193962787.0\n",
-              "27    28       189263681.0\n",
-              "40    41       181341935.0\n",
-              "31    32       166819246.0\n",
-              "17    18       155114734.0\n",
-              "21    22       147075649.0\n",
-              "11    12       144287230.0\n",
-              "25    26       143416394.0\n",
-              "33    34       138249763.0\n",
-              "39    40       137870310.0\n",
-              "34    35       131520672.0\n",
-              "7      8       129951181.0\n",
-              "16    17       127782139.0\n",
-              "44    45       112395341.0\n",
-              "20    21       108117879.0\n",
-              "24    25       101061179.0\n",
-              "42    43        90565435.0\n",
-              "14    15        89133684.0\n",
-              "6      7        81598275.0\n",
-              "41    42        79565752.0\n",
-              "8      9        77789219.0\n",
-              "28    29        77141554.0\n",
-              "15    16        74252425.0\n",
-              "36    37        74202740.0\n",
-              "29    30        62716885.0\n",
-              "2      3        57586735.0\n",
-              "37    38        55159626.0\n",
-              "35    36        53412215.0\n",
-              "4      5        45475689.0\n",
-              "43    44        43293088.0\n",
-              "32    33        37160222.0"
+              "    Loja  Total_Vendas\n",
+              "19    20   301397792.0\n",
+              "3      4   299543953.0\n",
+              "13    14   288999911.0\n",
+              "12    13   286517704.0\n",
+              "1      2   275382441.0\n",
+              "9     10   271617714.0\n",
+              "26    27   253855917.0\n",
+              "5      6   223756131.0\n",
+              "0      1   222402809.0\n",
+              "38    39   207445542.0\n",
+              "18    19   206634862.0\n",
+              "30    31   199613906.0\n",
+              "22    23   198750618.0\n",
+              "23    24   194016021.0\n",
+              "10    11   193962787.0\n",
+              "27    28   189263681.0\n",
+              "40    41   181341935.0\n",
+              "31    32   166819246.0\n",
+              "17    18   155114734.0\n",
+              "21    22   147075649.0\n",
+              "11    12   144287230.0\n",
+              "25    26   143416394.0\n",
+              "33    34   138249763.0\n",
+              "39    40   137870310.0\n",
+              "34    35   131520672.0\n",
+              "7      8   129951181.0\n",
+              "16    17   127782139.0\n",
+              "44    45   112395341.0\n",
+              "20    21   108117879.0\n",
+              "24    25   101061179.0\n",
+              "42    43    90565435.0\n",
+              "14    15    89133684.0\n",
+              "6      7    81598275.0\n",
+              "41    42    79565752.0\n",
+              "8      9    77789219.0\n",
+              "28    29    77141554.0\n",
+              "15    16    74252425.0\n",
+              "36    37    74202740.0\n",
+              "29    30    62716885.0\n",
+              "2      3    57586735.0\n",
+              "37    38    55159626.0\n",
+              "35    36    53412215.0\n",
+              "4      5    45475689.0\n",
+              "43    44    43293088.0\n",
+              "32    33    37160222.0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6c29ae7b-1366-40f3-8ca1-15a41b5b7abb\">\n",
+              "  <div id=\"df-25702335-6f5c-4092-874c-5f4f83026522\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1984,7 +1990,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Loja</th>\n",
-              "      <th>Vendas_na_Semana</th>\n",
+              "      <th>Total_Vendas</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -2216,7 +2222,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c29ae7b-1366-40f3-8ca1-15a41b5b7abb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25702335-6f5c-4092-874c-5f4f83026522')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2267,12 +2273,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6c29ae7b-1366-40f3-8ca1-15a41b5b7abb button.colab-df-convert');\n",
+              "          document.querySelector('#df-25702335-6f5c-4092-874c-5f4f83026522 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6c29ae7b-1366-40f3-8ca1-15a41b5b7abb');\n",
+              "          const element = document.querySelector('#df-25702335-6f5c-4092-874c-5f4f83026522');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2295,7 +2301,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 150
+          "execution_count": 163
         }
       ]
     },
@@ -2312,22 +2318,22 @@
           "height": 143
         },
         "id": "gBVJw0gNj8rP",
-        "outputId": "11ef998c-44b4-4c36-d835-710d7217d20b"
+        "outputId": "c863731b-bf8a-4b6d-a974-112ecf05693e"
       },
-      "execution_count": 151,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "    Loja  Vendas_na_Semana\n",
-              "19    20       301397792.0\n",
-              "3      4       299543953.0\n",
-              "13    14       288999911.0"
+              "    Loja  Total_Vendas\n",
+              "19    20   301397792.0\n",
+              "3      4   299543953.0\n",
+              "13    14   288999911.0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e9f7a5af-b511-4210-9764-4fda7e525e15\">\n",
+              "  <div id=\"df-4a9029bd-b0b2-46b9-a924-7c5eb8356be2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2348,7 +2354,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Loja</th>\n",
-              "      <th>Vendas_na_Semana</th>\n",
+              "      <th>Total_Vendas</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -2370,7 +2376,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e9f7a5af-b511-4210-9764-4fda7e525e15')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a9029bd-b0b2-46b9-a924-7c5eb8356be2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2421,12 +2427,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e9f7a5af-b511-4210-9764-4fda7e525e15 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4a9029bd-b0b2-46b9-a924-7c5eb8356be2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e9f7a5af-b511-4210-9764-4fda7e525e15');\n",
+              "          const element = document.querySelector('#df-4a9029bd-b0b2-46b9-a924-7c5eb8356be2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2449,7 +2455,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 151
+          "execution_count": 164
         }
       ]
     },
@@ -2465,21 +2471,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SS4gI55Lfnx5",
-        "outputId": "d60558c3-070a-4f9f-bae0-425a4610662e"
+        "outputId": "c31eb929-054e-4704-bc7f-4e3e44e3aeeb"
       },
-      "execution_count": 160,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Loja                       45.0\n",
-              "Vendas_na_Semana    301397792.0\n",
+              "Loja                   45.0\n",
+              "Total_Vendas    301397792.0\n",
               "dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 160
+          "execution_count": 166
         }
       ]
     },
@@ -2523,7 +2529,7 @@
       "metadata": {
         "id": "hrtMF_L1VcXq"
       },
-      "execution_count": 70,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -2541,9 +2547,9 @@
           "height": 597
         },
         "id": "ga-9Y4QpVpgi",
-        "outputId": "596e5019-56bb-4fbb-c050-0b2366383693"
+        "outputId": "bd454cd1-d8f8-4007-fbc7-856da9876f0c"
       },
-      "execution_count": 73,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "display_data",
